# ml-pipelines

./: .coveragerc  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  codecov.yaml  main.py  noxfile.py  pyproject.toml  pyrightconfig.json  renovate.json  ty.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  protection.json
.github/workflows/: format.yml  lint.yml  publish.yml  setting.yml  test.yml
const/: __init__.py  environment.py  environments.py  model_type.py  model_types.py  task.py  tasks.py
environments/: __init__.py  dev.py  prod.py  settings.py
pipelines/: __init__.py  components.py  main.py  settings.py
pipelines/graphs/: __init__.py  sample.py
pipelines/types/: __init__.py  sample.py
tasks/: __init__.py  base.py
tasks/evaluation/: __init__.py  run.py  settings.py
tasks/export/: __init__.py  run.py  settings.py
tasks/feature_engineering/: __init__.py  run.py  settings.py
tasks/inference/: __init__.py  run.py  settings.py
tasks/training/: __init__.py  run.py  settings.py
tests/: conftest.py  test__main.py
tests/const/: test__environments.py  test__model_types.py  test__tasks.py
tests/pipeline/: conftest.py  test__compile.py  test__settings.py
tests/tasks/: test__base.py  test__evaluation.py  test__export.py  test__feature_engineering.py  test__inference.py  test__training.py
